# finbr

./: .gitignore  README.md  pyproject.toml
finbr/: __init__.py  _yf.py  yf.py
finbr/b3/: __init__.py  cotahist.py  di1.py  indices.py  plantao_noticias.py  utils.py
finbr/backtest/: __init__.py
finbr/dias_uteis/: __init__.py  base.py  feriados.py  holidays.py
finbr/fundamentus/: __init__.py
finbr/sgs/: __init__.py
finbr/statusinvest/: __init__.py  _utils.py  acao.py
tests/: test_dias_uteis.py
tests/b3/: di1.py  test_di1.py
tests/dias_uteis/: __init__.py
