[project]
name = "finbr"
version = "0.1.5"
description = "Collection of Python utilities for Brazilian financial markets."
authors = [
    {name = "Renan Moretto",email = "renan_moretto@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "requests (>=2.32.3,<3.0.0)",
    "unidecode>=1.3.8",
    "polars>=1.26.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
